--- a/pom.xml
+++ b/pom.xml
@@ -2,49 +2,112 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>esquadron</groupId>
-    <artifactId>esquadron-web</artifactId>
-    <packaging>war</packaging>
+    <groupId>tecolotl</groupId>
+    <artifactId>tecolotl</artifactId>
+    <packaging>pom</packaging>
     <version>0.1</version>
-    <name>Esquadron</name>
+    <name>Tecolotl</name>
+    
+    <licenses>
+    	<license>
+    		<distribution>comercial</distribution>
+    	</license>
+    </licenses>
+    
+    <developers>
+    	<developer>
+    		<name>Ana Delia Cristóbal González</name>
+    		<email>ana.cristobal@nahtechnology.com</email>
+    		<roles>
+    			<role>Analista</role>
+    		</roles>
+    	</developer>
+    	<developer>
+    		<name>Antonio Francisco Alonso Valerdi</name>
+    		<email>antonio.alonso@nahtechnology.com</email>
+    		<roles>
+    			<role>Desarrollador Back</role>
+    			<role>Administrador Base de Datos</role>
+    		</roles>
+    	</developer>
+    </developers>
   
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        
+        <!-- JBoss dependency versions -->
+        <version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
+        <!-- Define the version of the JBoss BOMs we want to import to specify tested stacks. -->
+        <version.jboss.bom>8.2.1.Final</version.jboss.bom>
+        <version.wildfly>9.0.0.Alpha1</version.wildfly>
+        <!-- other plugin versions -->
+        <version.compiler.plugin>3.1</version.compiler.plugin>
+        <version.ear.plugin>2.10</version.ear.plugin>
+        <version.ejb.plugin>2.3</version.ejb.plugin>
+        <version.surefire.plugin>2.16</version.surefire.plugin>
+        <version.war.plugin>2.5</version.war.plugin>
+        
         <maven.compiler.source>1.7</maven.compiler.source>
     	<maven.compiler.target>1.7</maven.compiler.target>
     </properties>
     
-    <dependencies>
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>7.0</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
+    <dependencyManagement>
+    	<dependencies>
+    		<dependency>
+    			<groupId>tecolotl</groupId>
+    			<artifactId>tecolotl-nucleo</artifactId>
+    			<version>${project.version}</version>
+    			<type>ejb</type>
+    		</dependency>
+    		<dependency>
+    			<groupId>tecolotl</groupId>
+    			<artifactId>tecolotl-web</artifactId>
+    			<version>${project.version}</version>
+    			<type>war</type>
+    			<scope>compile</scope>
+    		</dependency>
+	    	<dependency>
+	                <groupId>org.wildfly.bom</groupId>
+	                <artifactId>jboss-javaee-7.0-with-tools</artifactId>
+	                <version>${version.jboss.bom}</version>
+	                <type>pom</type>
+	                <scope>import</scope>
+	            </dependency>
+	
+	            <dependency>
+	                <groupId>org.wildfly.bom</groupId>
+	                <artifactId>jboss-javaee-7.0-with-hibernate</artifactId>
+	                <version>${version.jboss.bom}</version>
+	                <type>pom</type>
+	                <scope>import</scope>
+	            </dependency>
+    	</dependencies>
+    </dependencyManagement>
+    
+    <build>
+        <pluginManagement>
+            <plugins>
+                <!-- The WildFly plugin deploys your ear to a local JBoss
+                    AS container -->
+                <!-- Due to Maven's lack of intelligence with EARs we need 
+                    to configure the wildfly maven plugin to skip deployment for all modules.
+                    We then enable it specifically in the ear module. -->
+                <plugin>
+                    <groupId>org.wildfly.plugins</groupId>
+                    <artifactId>wildfly-maven-plugin</artifactId>
+                    <version>${version.wildfly.maven.plugin}</version>
+                    <inherited>true</inherited>
+                    <configuration>
+                        <skip>true</skip>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
-<profiles>
-    <profile>
-     <!-- When built in OpenShift the 'openshift' profile will be used when invoking mvn. -->
-     <!-- Use this profile for any OpenShift specific customization your app will need. -->
-     <!-- By default that is to put the resulting archive into the 'deployments' folder. -->
-     <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
-     <id>openshift</id>
-     <build>
-        <finalName>SampleApp</finalName>
-        <plugins>
-          <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.3</version>
-                <configuration>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
-                    <outputDirectory>target</outputDirectory>
-              		  <warName>ROOT</warName>
-                </configuration>
-            </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
+    <modules>
+    	<module>tecolotl-ear</module>
+    	<module>tecolotl-web</module>
+    	<module>tecolotl-nucleo</module>
+    </modules>
 </project>
