Se agrega la dependencia de alumno en el ear.

--- a/tecolotl-ear/pom.xml
+++ b/tecolotl-ear/pom.xml
@@ -26,6 +26,11 @@
 			<artifactId>tecolotl-nucleo</artifactId>
 			<type>ejb</type>
 		</dependency>
+		<dependency>
+			<groupId>tecolotl</groupId>
+			<artifactId>tecolotl-alumno</artifactId>
+			<type>ejb</type>
+		</dependency>
 	</dependencies>
 
 	<build>
