Se agrega pruebas unitarias para el componente de alumnos

--- a/tecolotl-nucleo/pom.xml
+++ b/tecolotl-nucleo/pom.xml
@@ -71,6 +71,24 @@
             <scope>test</scope>               
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-persistence-dbunit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-persistence-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-persistence-impl</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     
     <build>
