--- a/tecolotl-alumno/pom.xml
+++ b/tecolotl-alumno/pom.xml
@@ -11,11 +11,14 @@
 	<packaging>ejb</packaging>
 	<name>tecolotl-alumno</name>
 	
-		<dependencies>
+    <dependencies>
 
-        <!-- Declare the APIs we depend on and need for compilation. All of 
-            them are provided by JBoss WildFly -->
-
+        <dependency>
+            <groupId>tecolotl</groupId>
+            <artifactId>tecolotl-nucleo</artifactId>
+            <type>ejb</type>
+            <scope>provided</scope>
+        </dependency>
         <!-- Import the EJB API, we use provided scope as the API is included in JBoss WildFly -->
         <dependency>
             <groupId>org.jboss.spec.javax.ejb</groupId>
