--- a/tecolotl-ear/pom.xml
+++ b/tecolotl-ear/pom.xml
@@ -28,6 +28,11 @@
 		</dependency>
 		<dependency>
 			<groupId>tecolotl</groupId>
+			<artifactId>tecolotl-administracion</artifactId>
+			<type>ejb</type>
+		</dependency>
+		<dependency>
+			<groupId>tecolotl</groupId>
 			<artifactId>tecolotl-alumno</artifactId>
 			<type>ejb</type>
 		</dependency>
