--- a/tecolotl-web/pom.xml
+++ b/tecolotl-web/pom.xml
@@ -21,6 +21,13 @@
 			<type>ejb</type>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>tecolotl</groupId>
+			<artifactId>tecolotl-administracion</artifactId>
+			<type>ejb</type>
+			<scope>provided</scope>
+		</dependency>
 	
 		<!-- Import the JAX-RS API, we use provided scope as the API is included 
 			in JBoss WildFly -->
