Los datos del usuario son almacenados en un session bean

--- a/tecolotl-web/pom.xml
+++ b/tecolotl-web/pom.xml
@@ -28,6 +28,13 @@
 			<type>ejb</type>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>tecolotl</groupId>
+			<artifactId>tecolotl-nucleo</artifactId>
+			<type>ejb</type>
+			<scope>provided</scope>
+		</dependency>
 	
 		<!-- Import the JAX-RS API, we use provided scope as the API is included 
 			in JBoss WildFly -->
