Modal de agregar hasta los datos de la dirección

--- a/tecolotl-web/src/main/resources/lenguaje/comun.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun.properties
@@ -1,5 +1,11 @@
+#common
 button.accept=accept
+button.cancel=cancel
+button.add=add
 
 #people
 student=student
 teacher=teacher
+
+#school
+scchool.add.title=new school
