Modal para revision con juan

--- a/tecolotl-web/src/main/resources/lenguaje/comun.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun.properties
@@ -1,4 +1,4 @@
-#common
+#objects
 button.accept=accept
 button.cancel=cancel
 button.add=add
@@ -8,4 +8,13 @@ student=student
 teacher=teacher
 
 #school
-scchool.add.title=new school
+school.add.title=new school
+school.cct=lave centro trabajo
+school.name=name
+school.colony=colony
+school.postalcode=postal code
+school.city=city
+school.town=town
+school.street=street
+school.street.num.ext=número exterior
+school.street.num.int=número interior
