Se muestra el boton de buscar codigo postal

--- a/tecolotl-web/src/main/resources/lenguaje/comun.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun.properties
@@ -9,7 +9,7 @@ teacher=teacher
 
 #school
 school.add.title=new school
-school.cct=lave centro trabajo
+school.cct=clave centro trabajo
 school.name=name
 school.colony=colony
 school.postalcode=postal code
