Se agrego ventana bloquear

--- a/tecolotl-web/src/main/resources/lenguaje/comun.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun.properties
@@ -18,3 +18,4 @@ school.town=town
 school.street=street
 school.street.num.ext=número exterior
 school.street.num.int=número interior
+school.blockreason.title=block reason
