Elimina y bloquea /home/antonio/Descargas/GochiHand-Regular.ttf

--- a/tecolotl-web/src/main/resources/lenguaje/comun.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun.properties
@@ -2,7 +2,11 @@
 button.accept=accept
 button.cancel=cancel
 button.add=add
-button.search=buscar
+button.search=search
+button.detail=detail
+button.edit=edit
+button.remove=remove
+button.block=block
 
 #people
 student=student
@@ -17,6 +21,11 @@ school.postalcode=postal code
 school.city=city
 school.town=town
 school.street=street
+school.status=status
+school.licenses=licences
+school.remaining.days=remaining days
 school.street.num.ext=número exterior
 school.street.num.int=número interior
 school.blockreason.title=block reason
+school.remove.title=Eliminar escuela {0}
+school.remove.message=\u00BFEst\u00E1 seguro en borrar la escuela {0}?, No se prodr\u00E1 recuperar los datos
