Vista de la escuelas, alimina, bloquea y actualiza

--- a/tecolotl-web/src/main/resources/lenguaje/comun.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun.properties
@@ -7,6 +7,7 @@ button.detail=detail
 button.edit=edit
 button.remove=remove
 button.block=block
+button.active=activar
 
 #people
 student=student
@@ -29,3 +30,11 @@ school.street.num.int=número interior
 school.blockreason.title=block reason
 school.remove.title=Eliminar escuela {0}
 school.remove.message=\u00BFEst\u00E1 seguro en borrar la escuela {0}?, No se prodr\u00E1 recuperar los datos
+
+school.label=escuelas
+
+#catalogs
+catalog.label=catalogs
+catalog.blockingreason=blocking reason
+catalog.colony=colony
+catalog.contact=contact
