Se agregaron comun.properties

--- a/tecolotl-web/src/main/resources/lenguaje/comun.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun.properties
@@ -38,3 +38,12 @@ catalog.label=catalogs
 catalog.blockingreason=blocking reason
 catalog.colony=colony
 catalog.contact=contact
+#school-details
+
+school-details.heading=school details
+school-details.contact=school contacts
+school-details.new=new contact
+school-details.table.name=name
+school-details.table.type=type
+school-details.table.phone=phone
+school-details.table.option=options 
