Tabla de motivos de bloqueo

--- a/tecolotl-web/src/main/resources/lenguaje/comun.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun.properties
@@ -9,6 +9,9 @@ button.remove=remove
 button.block=block
 button.active=activar
 
+#label
+label.option=opciones
+
 #people
 student=student
 teacher=teacher
@@ -24,6 +27,7 @@ school.town=town
 school.street=street
 school.status=status
 school.licenses=licences
+school.option=opciones
 school.remaining.days=remaining days
 school.street.num.ext=número exterior
 school.street.num.int=número interior
@@ -38,6 +42,9 @@ catalog.label=catalogs
 catalog.blockingreason=blocking reason
 catalog.colony=colony
 catalog.contact=contact
+catalog.description=descripcion
+catalog.new=nuevo catalogo
+catalog.new.placeholder=nuevo catalogo
 #school-details
 
 school-details.heading=school details
