acomodar los grid de motivos

--- a/tecolotl-web/src/main/resources/lenguaje/comun.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun.properties
@@ -45,6 +45,10 @@ catalog.contact=contact
 catalog.description=descripcion
 catalog.new=nuevo catalogo
 catalog.new.placeholder=nuevo catalogo
+catalog.zipcode=c\u00F3digo postal
+catalog.name=nombre
+catalog.town=municipio
+catalog.state=estado
 #school-details
 
 school-details.heading=school details
