Inserte tabla de tipos de contactos

--- a/tecolotl-web/src/main/resources/lenguaje/comun.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun.properties
@@ -49,6 +49,8 @@ catalog.zipcode=c\u00F3digo postal
 catalog.name=nombre
 catalog.town=municipio
 catalog.state=estado
+catalog.typescontacts=tipos de contactos
+
 #school-details
 
 school-details.heading=school details
