Paginación para motivos de bloqueo

--- a/tecolotl-web/src/main/resources/lenguaje/comun.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun.properties
@@ -8,6 +8,8 @@ button.edit=edit
 button.remove=remove
 button.block=block
 button.active=activar
+button.next=next
+button.back=back
 
 #label
 label.option=opciones
@@ -44,6 +46,7 @@ catalog.colony=colony
 catalog.contact=contact
 catalog.description=descripcion
 catalog.new=nuevo catalogo
+catalog.edit=editar catalogo
 catalog.new.placeholder=nuevo catalogo
 catalog.zipcode=c\u00F3digo postal
 catalog.name=nombre
