--- a/tecolotl-web/src/main/resources/lenguaje/comun.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/comun.properties
@@ -14,6 +14,7 @@ button.back=back
 #label
 label.option=opciones
 label.select=seleccione una opcion
+label.pages=p\u00E1gina {0} de {1} : total de filas {}
 
 #people
 student=student
@@ -21,7 +22,7 @@ teacher=teacher
 
 #school
 school.add.title=new school
-school.cct=clave centro trabajo
+school.cct=cct
 school.name=name
 school.colony=colony
 school.postalcode=postal code
