--- a/tecolotl-web/src/main/webapp/WEB-INF/web.xml
+++ b/tecolotl-web/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,7 @@
 		<welcome-file>index.xhtml</welcome-file>
 	</welcome-file-list>
 
-	<!-- seguridad -->
+	<!-- seguridad
 
 	<security-constraint>
 		<web-resource-collection>
@@ -59,5 +59,5 @@
 		<description>Usuario administrador del sistema de Tecolotl</description>
 		<role-name>administrador</role-name>
 	</security-role>
-	
+	-->
 </web-app>
