se creo archivo detalle-escuela

--- a/tecolotl-web/src/main/webapp/WEB-INF/web.xml
+++ b/tecolotl-web/src/main/webapp/WEB-INF/web.xml
@@ -11,8 +11,12 @@
 		<param-name>javax.faces.INTERPRET_EMPTY_STRING_SUBMITTED_VALUES_AS_NULL</param-name>
 		<param-value>true</param-value>
 	</context-param>
+    <context-param>
+        <param-name>javax.faces.CONFIG_FILES</param-name>
+        <param-value>/administracion/detalleEscuela.xml</param-value>
+    </context-param>
 
-	<!-- servlet de jsf -->
+    <!-- servlet de jsf -->
 
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
