Catalogo - Tipo contacto listo para pruebas

--- a/tecolotl-web/src/main/resources/lenguaje/escuelacatalogo.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/escuelacatalogo.properties
@@ -5,3 +5,7 @@ block.title=motivo bloqueo
 modal.blobk.new.title=agregar motivo blqqueo
 modal.blobk.edit.title=edittar motivo blqqueo
 modal.block.exist=motivo de bloqueo ya existe
+
+modal.contact.new.title=agregar tipo contacto
+modal.contact.edit.title=editar tipo contacto
+modal.contact.exist=tipo contact ya existe
