--- a/tecolotl-administracion/pom.xml
+++ b/tecolotl-administracion/pom.xml
@@ -15,6 +15,13 @@
     <description>Consola administradora</description>
 
     <dependencies>
+
+        <dependency>
+            <groupId>tecolotl</groupId>
+            <artifactId>tecolotl-nucleo</artifactId>
+            <type>ejb</type>
+        </dependency>
+
         <dependency>
             <groupId>org.jboss.spec.javax.ejb</groupId>
             <artifactId>jboss-ejb-api_3.2_spec</artifactId>
