Pruebas unitarias de escuela

--- a/tecolotl-web/src/main/resources/lenguaje/escuelacatalogo.properties
+++ b/tecolotl-web/src/main/resources/lenguaje/escuelacatalogo.properties
@@ -1,6 +1,10 @@
 title=catalago administrativo
 
 block.title=motivo bloqueo
+contact.title=tipo contacto
+colony.title=colonias
+colony.zipcode.input=ingresa c\u00F3digo postal
+colony.zipcode.label=c\u00F3digo postal
 
 modal.blobk.new.title=agregar motivo blqqueo
 modal.blobk.edit.title=edittar motivo blqqueo
@@ -8,4 +12,16 @@ modal.block.exist=motivo de bloqueo ya existe
 
 modal.contact.new.title=agregar tipo contacto
 modal.contact.edit.title=editar tipo contacto
-modal.contact.exist=tipo contact ya existe
+modal.contact.exist=tipo contacto ya existe
+
+modal.colony.new.title=agregar colonia
+modal.colony.edit.title=editar colonia
+modal.colony.exist=tipo colonia ya existe
+
+#unicode
+#\u00E1 á
+#\u00E9 é
+#\u00ED í
+#\u00F3 ó
+#\u00FA ú
+#\u00BF ¿
