--- a/tecolotl-alumno/pom.xml
+++ b/tecolotl-alumno/pom.xml
@@ -131,7 +131,7 @@
             <!-- An optional Arquillian testing profile that executes tests 
                 in a remote WildFly instance -->
             <!-- Run with: mvn clean test -Parq-wildfly-remote -->
-            <id>arq-wildfly-remote</id>
+            <id>remoto</id>
             <dependencies>
                 <dependency>
                     <groupId>org.wildfly</groupId>
