--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -3,11 +3,11 @@ dashboard.modal.add.title=agregar escuelas
 dashboard.modal.edit.title=editar escuelas
 dashboard.modal.cct=cct
 dashboard.modal.name=nombre
-dashboard.modal.zipcode=c#\u00F3digo postal
+dashboard.modal.zipcode=c\u00F3digo postal
 dashboard.modal.colony=colonia
 dashboard.modal.street=calle
-dashboard.modal.street.num.int=n#\u00FAmero interior
-dashboard.modal.street.num.ext=n#\u00FAmero exterior
+dashboard.modal.street.num.int=n\u00FAmero interior
+dashboard.modal.street.num.ext=n\u00FAmero exterior
 dashboard.modal.city=ciudad
 dashboard.modal.town=estado
 
