Se validan los datos de un nueva escuela

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -5,8 +5,8 @@ dashboard.modal.name=nombe escuela
 dashboard.modal.zipcode=c\u00F3digo postal
 dashboard.modal.colony=colonia
 dashboard.modal.street=calle
-dashboard.modal.street.num.ext=n#\u00FAmero exterior
-dashboard.modal.street.num.int=n#\u00FAmero interior
+dashboard.modal.street.num.ext=n\u00FAmero exterior
+dashboard.modal.street.num.int=n\u00FAmero interior
 dashboard.modal.city=municipio
 dashboard.modal.town=estado
 
