Bloquear una escuela, desarrollo

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -9,6 +9,7 @@ dashboard.modal.street.num.ext=n\u00FAmero exterior
 dashboard.modal.street.num.int=n\u00FAmero interior
 dashboard.modal.city=municipio
 dashboard.modal.town=estado
+dashboard.modalbloqueo.title=Bloquear escuela {0}
 
 catalogoadministrativo.title=cat\u00E1logos
 
