--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -9,7 +9,11 @@ dashboard.modal.street.num.ext=n\u00FAmero exterior
 dashboard.modal.street.num.int=n\u00FAmero interior
 dashboard.modal.city=municipio
 dashboard.modal.town=estado
-dashboard.modalbloqueo.title=Bloquear escuela {0}
+dashboard.modalbloqueo.title=bloquear escuela: {0}
+dashboard.modalremove.title=eliminar escuela: {0}
+dashboard.modalremove.message=est\u00E1 seguro que desea eliminar la escuela: {0}, una vez eliminada no se podr\u00E1 recuperar\
+  los datos relacionados con dicha escuela.
+
 
 catalogoadministrativo.title=cat\u00E1logos
 
