--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -13,6 +13,7 @@ dashboard.modalbloqueo.title=bloquear escuela: {0}
 dashboard.modalremove.title=eliminar escuela: {0}
 dashboard.modalremove.message=est\u00E1 seguro que desea eliminar la escuela: {0}, una vez eliminada no se podr\u00E1 recuperar\
   los datos relacionados con dicha escuela.
+dashboard.search.tooltip=busqueda por clave centro de trabjo o por nombre de escuela
 
 
 catalogoadministrativo.title=cat\u00E1logos
