Validaciones para cct de una escuela (pruebas)

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -14,10 +14,9 @@ dashboard.modalremove.title=eliminar escuela: {0}
 dashboard.modalremove.message=est\u00E1 seguro que desea eliminar la escuela: {0}, una vez eliminada no se podr\u00E1 recuperar\
   los datos relacionados con dicha escuela.
 dashboard.search.tooltip=busqueda por clave centro de trabjo o por nombre de escuela
-
+dashboard.validation.cct=La escuela ya axiste
 
 catalogoadministrativo.title=cat\u00E1logos
-
 
 #Vista Catalogo Coordinador/Profesor
 catalogocoordinador.coordinatorcatalog=Bloqueo Coordinador
