Modulo de profesores, se agrega la entidad de profesor con pruebas unitarias

--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,7 @@
     	<module>tecolotl-nucleo</module>
     	<module>tecolotl-alumno</module>
         <module>tecolotl-administracion</module>
+        <module>tecolotl-profesor</module>
     </modules>
 
 </project>
