--- a/tecolotl-profesor/pom.xml
+++ b/tecolotl-profesor/pom.xml
@@ -1,24 +1,38 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>tecolotl</groupId>
-		<artifactId>tecolotl</artifactId>
-		<version>0.1</version>
-	</parent>
-	<artifactId>tecolotl-alumno</artifactId>
-	<packaging>ejb</packaging>
-	<name>tecolotl-alumno</name>
-	
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>tecolotl</artifactId>
+        <groupId>tecolotl</groupId>
+        <version>0.1</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>tecolotl-profesor</artifactId>
+    <packaging>ejb</packaging>
+    <name>tecolotl-profesor</name>
+
     <dependencies>
 
         <dependency>
             <groupId>tecolotl</groupId>
             <artifactId>tecolotl-nucleo</artifactId>
             <type>ejb</type>
-            <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>tecolotl</groupId>
+            <artifactId>tecolotl-administracion</artifactId>
+            <type>ejb</type>
+        </dependency>
+
+        <dependency>
+            <groupId>tecolotl</groupId>
+            <artifactId>tecolotl-alumno</artifactId>
+            <type>ejb</type>
+        </dependency>
+
         <!-- Import the EJB API, we use provided scope as the API is included in JBoss WildFly -->
         <dependency>
             <groupId>org.jboss.spec.javax.ejb</groupId>
@@ -58,22 +72,22 @@
         </dependency>
 
         <!-- Optional, but highly recommended -->
-        <!-- Arquillian allows you to test enterprise code such as EJBs and 
+        <!-- Arquillian allows you to test enterprise code such as EJBs and
             Transactional(JTA) JPA from JUnit/TestNG -->
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
             <artifactId>arquillian-junit-container</artifactId>
             <scope>test</scope>
         </dependency>
-      
+
         <dependency>
             <groupId>org.jboss.arquillian.protocol</groupId>
             <artifactId>arquillian-protocol-servlet</artifactId>
-            <scope>test</scope>               
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
-    
+
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
@@ -87,7 +101,7 @@
             </plugin>
         </plugins>
     </build>
-    
+
     <profiles>
         <profile>
             <id>default</id>
@@ -119,4 +133,5 @@
         </profile>
 
     </profiles>
+
 </project>
