Vistas de administración: dashboard y detalle escuela listo para pruebas

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -16,8 +16,27 @@ dashboard.modalremove.message=est\u00E1 seguro que desea eliminar la escuela: {0
 dashboard.search.tooltip=busqueda por clave centro de trabjo o por nombre de escuela
 dashboard.validation.cct=La escuela ya axiste
 
-catalogoadministrativo.title=cat\u00E1logos
+#Detalle escuela
+schooldetail.title=datos escuela
+schooldetail.licensetotal=total de licencias
+schooldetail.licenses=licencias
+schooldetail.contacts=contacto escuelas
+schooldetail.contacts.id=id
+schooldetail.contacts.name=nombre
+schooldetail.contacts.type=tipo contacto
+schooldetail.contacts.phone=tel\u00E9fono
+schooldetail.contacts.email=correo electr\u00F3nico
+schooldetail.lisense.id=id
+schooldetail.lisense.datestart=fecha inicio
+schooldetail.lisense.dateacquisition=fecha adquisici\u00F3n
+schooldetail.modal.addcontact.title=agregar Contacto
+schooldetail.modal.updatecontact=modificar contacto
+schooldetail.modal.removecontact.title=eliminar contacto
+schooldetail.modal.removecontact.message=esta seguro que desea borrar al contacto: {0}
+schooldetail.modal.updatelicense.title=actualizar licencia: {0}
+schooldetail.modal.deletelicense.title=eliminar licencia n\u00FAmero: {0}
 
+catalogoadministrativo.title=cat\u00E1logos
 #Vista Catalogo Coordinador/Profesor
 catalogocoordinador.coordinatorcatalog=Bloqueo Coordinador
 catalogocoordinador.teachercatalog=Bloqueo Profesor
@@ -107,12 +126,13 @@ detalleprofesor.active.modal.new.teacher.degree=grado
 detalleprofesor.active.modal.header.password=contrase\u0148a
 
 #Menu detalle-escuela
-detalleescuela.menu.school=escuelas
-detalleescuela.menu.catalogs=cat\u00E1logos
-
-
-
-
+menu.schools=escuelas
+menu.catalog=cat\u00E1logo
+menu.dashboard=dashboard
+menu.catalog.administrator=administraci\u00F3n
+menu.catalog.coordinator=coordinaci\u00F3n
+menu.coordinator=coordinador
+menu.admingroup=Gesti\u00F3n de grupos
 
 #unicode
 #\u00E1 á
