--- a/tecolotl-web/src/main/resources/etiqueta.properties
+++ b/tecolotl-web/src/main/resources/etiqueta.properties
@@ -6,6 +6,9 @@ description=descripci\u00F3n
 search=Escriba texto para filtrat...
 pages.total=p\u00E1gina {0, number} de {1,number} : total de filas {2, number}
 
+#formato fecha
+date.format=dd/MM/yyyy
+
 #unicode
 #\u00E1 á
 #\u00E9 é
