--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -14,7 +14,8 @@ dashboard.modalremove.title=eliminar escuela: {0}
 dashboard.modalremove.message=est\u00E1 seguro que desea eliminar la escuela: {0}, una vez eliminada no se podr\u00E1 recuperar\
   los datos relacionados con dicha escuela.
 dashboard.search.tooltip=busqueda por clave centro de trabjo o por nombre de escuela
-dashboard.validation.cct=La escuela ya axiste
+dashboard.validation.cct=la escuela ya axiste
+dashboard.validation.zipcode=c\u00F3dido postal no existe en la base de datos
 
 #Detalle escuela
 schooldetail.title=datos escuela
