Catalogo de colonias, busca por codigo postal las colonias

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -16,6 +16,7 @@ dashboard.modalremove.message=est\u00E1 seguro que desea eliminar la escuela: {0
 dashboard.search.tooltip=busqueda por clave centro de trabjo o por nombre de escuela
 dashboard.validation.cct=la escuela ya axiste
 dashboard.validation.zipcode=c\u00F3dido postal no existe en la base de datos
+dashboard.success.zipcode=c\u00F3dido postal localizado correctamente
 
 #Detalle escuela
 schooldetail.title=datos escuela
@@ -84,8 +85,7 @@ catalogoadministrativo.colony.table.header.options=opciones
 
 #Tabla tipo de contacto
 catalogoadministrativo.administrator.contact.catalog=tipo de contacto 
-catalogoadministrativo.contact.table.header.name=nombre 
-catalogoadministrativo.contact.table.header.edit=editar 
+catalogoadministrativo.contact.table.header.name=nombre
 
 #Tabla escuela
 catalogoadministrativo.school.table.cct=cct
