--- a/tecolotl-web/src/main/resources/etiqueta.properties
+++ b/tecolotl-web/src/main/resources/etiqueta.properties
@@ -5,7 +5,7 @@ write.text=escriba texto
 description=descripci\u00F3n
 search=Escriba texto para filtrat...
 pages.total=p\u00E1gina {0, number} de {1,number} : total de filas {2, number}
-
+edit=editar
 #formato fecha
 date.format=dd/MM/yyyy
 
