Catalogo colonias listo para revisión

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -1,4 +1,4 @@
-dashboard.titulo=Escuelas
+dashboard.titulo=escuelas
 dashboard.modal.add.title=agregar escuela
 dashboard.modal.cct=cct
 dashboard.modal.name=nombe escuela
@@ -77,7 +77,7 @@ catalogoadministrativo.administrator.modal.edit.blocking.reason=editar motivo de
 catalogoadministrativo.administrator.colony.catalog=colonia 
 catalogoadministrativo.administrator.modal.edit=editar colonia
 catalogoadministrativo.administrator.modal.new=nueva colonia 
-catalogoadministrativo.colony.table.header.code.zip=codigo postal 
+catalogoadministrativo.colony.table.header.code.zip=c\u00F3digo postal 
 catalogoadministrativo.colony.table.header.name=nombre 
 catalogoadministrativo.colony.table.header.municipality=municipio 
 catalogoadministrativo.colony.table.header.estate=estado 
@@ -133,7 +133,7 @@ menu.dashboard=dashboard
 menu.catalog.administrator=administraci\u00F3n
 menu.catalog.coordinator=coordinaci\u00F3n
 menu.coordinator=coordinador
-menu.admingroup=Gesti\u00F3n de grupos
+menu.admingroup=gesti\u00F3n de grupos
 
 #unicode
 #\u00E1 á
