Coordinador motivo de bloqueo con error

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -40,7 +40,7 @@ schooldetail.modal.deletelicense.title=eliminar licencia n\u00FAmero: {0}
 
 catalogoadministrativo.title=cat\u00E1logos
 #Vista Catalogo Coordinador/Profesor
-catalogocoordinador.coordinatorcatalog=Bloqueo Coordinador
+catalogocoordinador.coordinatorcatalog=bloqueo coordinador
 catalogocoordinador.teachercatalog=Bloqueo Profesor
 
 #Tabla coordinador
@@ -54,6 +54,7 @@ catalogocoordinador.coordinator.detail.table.header.licenses=licencias
 
 #modal nuevo-coordinador
 detallecoordinador.coordinator.modal.title.new.coordinator=nuevo coordinador
+detallecoordinador.coordinator.modal.title.edit.coordinator=editar coordinador
 detallecoordinador.coordinator.active.modal.last.name=apellido paterno
 detallecoordinador.coordinator.active.modal.mothers.last=apellido materno
 
@@ -74,17 +75,16 @@ catalogoadministrativo.administrator.modal.new.reason.blocking=nuevo motivo de b
 catalogoadministrativo.administrator.modal.edit.blocking.reason=editar motivo de bloqueo
 
 #Tabla colonia
-catalogoadministrativo.administrator.colony.catalog=colonia 
+catalogoadministrativo.administrator.colony.catalog=colonia
 catalogoadministrativo.administrator.modal.edit=editar colonia
-catalogoadministrativo.administrator.modal.new=nueva colonia 
-catalogoadministrativo.colony.table.header.code.zip=c\u00F3digo postal 
-catalogoadministrativo.colony.table.header.name=nombre 
-catalogoadministrativo.colony.table.header.municipality=municipio 
-catalogoadministrativo.colony.table.header.estate=estado 
-catalogoadministrativo.colony.table.header.options=opciones 
+catalogoadministrativo.administrator.modal.new=nueva colonia
+catalogoadministrativo.colony.table.header.code.zip=c\u00F3digo postal
+catalogoadministrativo.colony.table.header.name=nombre
+catalogoadministrativo.colony.table.header.municipality=municipio
+catalogoadministrativo.colony.table.header.estate=estado
 
 #Tabla tipo de contacto
-catalogoadministrativo.administrator.contact.catalog=tipo de contacto 
+catalogoadministrativo.administrator.contact.catalog=tipo de contacto
 catalogoadministrativo.contact.table.header.name=nombre
 
 #Tabla escuela
