Coordinador listo para pruebas

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -44,6 +44,7 @@ catalogocoordinador.coordinatorcatalog=bloqueo coordinador
 catalogocoordinador.teachercatalog=Bloqueo Profesor
 
 #Tabla coordinador
+catalogocoordinador.title=coordinadores
 catalogocoordinador.coordinator.block.table.header.id=Id
 catalogocoordinador.coordinator.block.table.header.name=nombre
 catalogocoordinador.coordinator.block.table.header.edit=editar
@@ -95,7 +96,6 @@ catalogoadministrativo.school.table.licenses=licencias
 catalogoadministrativo.school.table.remaining.days=dias restantes
 
 #Vista csvimportar
-
 csvimportar.active.administrator.import.csv.teachers=Importar Profesores CSV
 csvimportar.active.administrator.loaded.files=profesores validos
 csvimportar.active.administrator.unloaded.files=profesores no validos
