--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
     			<version>${project.version}</version>
     			<type>ejb</type>
     		</dependency>
+            <dependency>
+                <groupId>tecolotl</groupId>
+                <artifactId>tecolotl-profesor</artifactId>
+                <version>${project.version}</version>
+                <type>ejb</type>
+            </dependency>
     		<dependency>
     			<groupId>tecolotl</groupId>
     			<artifactId>tecolotl-web</artifactId>
