--- a/tecolotl-web/pom.xml
+++ b/tecolotl-web/pom.xml
@@ -31,6 +31,13 @@
 
 		<dependency>
 			<groupId>tecolotl</groupId>
+			<artifactId>tecolotl-profesor</artifactId>
+			<type>ejb</type>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>tecolotl</groupId>
 			<artifactId>tecolotl-nucleo</artifactId>
 			<type>ejb</type>
 			<scope>provided</scope>
