--- a/tecolotl-ear/pom.xml
+++ b/tecolotl-ear/pom.xml
@@ -36,6 +36,11 @@
 			<artifactId>tecolotl-alumno</artifactId>
 			<type>ejb</type>
 		</dependency>
+		<dependency>
+			<groupId>tecolotl</groupId>
+			<artifactId>tecolotl-profesor</artifactId>
+			<type>ejb</type>
+		</dependency>
 	</dependencies>
 
 	<build>
