--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -1,5 +1,6 @@
 dashboard.titulo=escuelas
 dashboard.modal.add.title=agregar escuela
+dashboard.modal.update.title=actualiza escuela
 dashboard.modal.cct=cct
 dashboard.modal.name=nombe escuela
 dashboard.modal.zipcode=c\u00F3digo postal
@@ -17,6 +18,7 @@ dashboard.search.tooltip=busqueda por clave centro de trabjo o por nombre de esc
 dashboard.validation.cct=la escuela ya axiste
 dashboard.validation.zipcode=c\u00F3dido postal no existe en la base de datos
 dashboard.success.zipcode=c\u00F3dido postal localizado correctamente
+dashboard.button.add=agrega una nueva escuela
 
 #Detalle escuela
 schooldetail.title=datos escuela
