--- a/tecolotl-profesor/pom.xml
+++ b/tecolotl-profesor/pom.xml
@@ -120,7 +120,7 @@
             <id>remoto</id>
             <dependencies>
                 <dependency>
-                    <groupId>org.wildfly</groupId>
+                    <groupId>org.wildfly.arquillian</groupId>
                     <artifactId>wildfly-arquillian-container-remote</artifactId>
                     <scope>test</scope>
                 </dependency>
