Se arreglan los errores de las clases de pruebas de cifrado

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -15,6 +15,7 @@ dashboard.modalremove.title=eliminar escuela: {0}
 dashboard.modalremove.message=est\u00E1 seguro que desea eliminar la escuela: {0}, una vez eliminada no se podr\u00E1 recuperar\
   los datos relacionados con dicha escuela.
 dashboard.search.tooltip=b\u00FAsqueda por CCT o por nombre de escuela
+dashboard.busqueda.cct=seleccione la CCT para ver detalles
 dashboard.validation.cct=la escuela ya axiste
 dashboard.validation.zipcode=c\u00F3dido postal no existe en la base de datos
 dashboard.success.zipcode=c\u00F3dido postal localizado correctamente
