--- a/tecolotl-web/src/main/webapp/WEB-INF/web.xml
+++ b/tecolotl-web/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,7 @@
 	</context-param>
 
 	<context-param>
+		<description>El número de alumnos por licencia</description>
 		<param-name>alumno.licencia</param-name>
 		<param-value>250</param-value>
 	</context-param>
