Se cambias las letras para los properties

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -20,6 +20,9 @@ dashboard.validation.cct=la escuela ya axiste
 dashboard.validation.zipcode=c\u00F3dido postal no existe en la base de datos
 dashboard.success.zipcode=c\u00F3dido postal localizado correctamente
 dashboard.button.add=agrega una nueva escuela
+dashboard.header.student=alumnos asignados
+dashboard.header.student.used=utilizados
+dashboard.header.teacher=profesores asignados
 
 #Detalle escuela
 schooldetail.title=datos escuela
