Se agrega la vista de no encontrado

--- a/tecolotl-web/src/main/webapp/WEB-INF/web.xml
+++ b/tecolotl-web/src/main/webapp/WEB-INF/web.xml
@@ -34,9 +34,16 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
-	
+
+	<!--	paginas de bienvenida	-->
 	<welcome-file-list>
 		<welcome-file>index.xhtml</welcome-file>
 	</welcome-file-list>
+
+	<!--	manejo de errores	-->
+	<error-page>
+		<error-code>404</error-code>
+		<location>/error/no-encontrado.xhtml</location>
+	</error-page>
 
 </web-app>
