--- a/tecolotl-administracion/pom.xml
+++ b/tecolotl-administracion/pom.xml
@@ -20,6 +20,7 @@
             <groupId>tecolotl</groupId>
             <artifactId>tecolotl-nucleo</artifactId>
             <type>ejb</type>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
