Se agregan los tooltip para las vistas de administracion

--- a/tecolotl-ear/pom.xml
+++ b/tecolotl-ear/pom.xml
@@ -58,7 +58,7 @@
 						<webModule>
 							<groupId>tecolotl</groupId>
 							<artifactId>tecolotl-web</artifactId>
-							<contextRoot>/pruebas-tecolotl</contextRoot>
+							<contextRoot>/tecolotl-desarrollo</contextRoot>
 						</webModule>
 					</modules>
 				</configuration>
