--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -34,9 +34,11 @@ schooldetail.contacts.name=nombre
 schooldetail.contacts.type=tipo contacto
 schooldetail.contacts.phone=tel\u00E9fono
 schooldetail.contacts.email=correo electr\u00F3nico
+schooldetail.contacts.tooltip.add=agregar un nuevo contacto
 schooldetail.lisense.id=id
 schooldetail.lisense.datestart=fecha inicio
 schooldetail.lisense.dateacquisition=fecha adquisici\u00F3n
+schooldetail.lisense.tooltip.add=agregar un nuevo licencia
 schooldetail.modal.addcontact.title=agregar Contacto
 schooldetail.modal.updatecontact=modificar contacto
 schooldetail.modal.removecontact.title=eliminar contacto
