--- a/tecolotl-web/src/main/webapp/WEB-INF/web.xml
+++ b/tecolotl-web/src/main/webapp/WEB-INF/web.xml
@@ -45,5 +45,45 @@
 		<error-code>404</error-code>
 		<location>/error/no-encontrado.xhtml</location>
 	</error-page>
+<!--
+	<security-constraint>
 
+		<web-resource-collection>
+			<web-resource-name>Paginas administrativas</web-resource-name>
+			<description>Proteccion para las vistas de la administracion</description>
+			<url-pattern>/administracion/*</url-pattern>
+			<http-method>GET</http-method>
+			<http-method>POST</http-method>
+			<http-method>PUT</http-method>
+			<http-method>DELETE</http-method>
+			<http-method>OPTIONS</http-method>
+		</web-resource-collection>
+
+		<auth-constraint>
+			<description>Rol para al administracion</description>
+			<role-name>administrador</role-name>
+		</auth-constraint>
+
+		<user-data-constraint>
+			<description>Como los datos del usuario deben ser transmitidos</description>
+			<transport-guarantee>NONE</transport-guarantee>
+		</user-data-constraint>
+
+	</security-constraint>
+
+	<login-config>
+
+		<auth-method>FORM</auth-method>
+
+		<form-login-config>
+			<form-login-page>/ingreso.xhtml</form-login-page>
+			<form-error-page>/ingreso.xhtml</form-error-page>
+		</form-login-config>
+
+	</login-config>
+
+	<security-role>
+		<role-name>administrador</role-name>
+	</security-role>
+	-->
 </web-app>
