--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -1,5 +1,6 @@
 dashboard.titulo=escuelas
 dashboard.modal.add.title=agregar escuela
+dashboard.modal.update.title=actualiza escuela
 dashboard.modal.cct=cct
 dashboard.modal.name=nombe escuela
 dashboard.modal.zipcode=c\u00F3digo postal
@@ -13,10 +14,17 @@ dashboard.modalbloqueo.title=bloquear escuela: {0}
 dashboard.modalremove.title=eliminar escuela: {0}
 dashboard.modalremove.message=est\u00E1 seguro que desea eliminar la escuela: {0}, una vez eliminada no se podr\u00E1 recuperar\
   los datos relacionados con dicha escuela.
-dashboard.search.tooltip=busqueda por clave centro de trabjo o por nombre de escuela
+dashboard.search.tooltip.enable=b\u00FAsqueda por CCT o por nombre de escuela
+dashboard.search.tooltip.diseble=no hay escuelas registradas
+dashboard.busqueda.cct=seleccione la CCT para ver detalles
 dashboard.validation.cct=la escuela ya axiste
 dashboard.validation.zipcode=c\u00F3dido postal no existe en la base de datos
 dashboard.success.zipcode=c\u00F3dido postal localizado correctamente
+dashboard.button.add=agrega una nueva escuela
+dashboard.header.student=alumnos asignados
+dashboard.header.student.used=utilizados
+dashboard.header.teacher=profesores asignados
+dashboard.notification.notfound=no se encontraron resultados que coincidan con la búsqueda
 
 #Detalle escuela
 schooldetail.title=datos escuela
