Resolucion de incidencias: 15, 14, 7, 6, 5 y 12 en desarrollo

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -2,7 +2,7 @@ dashboard.titulo=escuelas
 dashboard.modal.add.title=agregar escuela
 dashboard.modal.update.title=actualiza escuela
 dashboard.modal.cct=cct
-dashboard.modal.name=nombe escuela
+dashboard.modal.name=nombre
 dashboard.modal.zipcode=c\u00F3digo postal
 dashboard.modal.colony=colonia
 dashboard.modal.street=calle
@@ -24,7 +24,7 @@ dashboard.button.add=agrega una nueva escuela
 dashboard.header.student=alumnos asignados
 dashboard.header.student.used=utilizados
 dashboard.header.teacher=profesores asignados
-dashboard.notification.notfound=no se encontraron resultados que coincidan con la búsqueda
+dashboard.notification.notfound=no se encontraron resultados que coincidan con la b\u00FAsqueda
 
 #Detalle escuela
 schooldetail.title=datos escuela
