Se agregan la dependecia de selector de fecha como objecto en javascript

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -137,6 +137,7 @@ detalleprofesor.active.modal.new.teacher.degree=grado
 detalleprofesor.active.modal.header.password=contrase\u0148a
 
 #Menu detalle-escuela
+menu=menu
 menu.schools=escuelas
 menu.catalog=cat\u00E1logo
 menu.dashboard=dashboard
