Desarrollo del selector de fecha - javascript

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -24,7 +24,9 @@ dashboard.button.add=agrega una nueva escuela
 dashboard.header.student=alumnos asignados
 dashboard.header.student.used=utilizados
 dashboard.header.teacher=profesores asignados
+dashboard.header.coor=coordinadores asignados
 dashboard.notification.notfound=no se encontraron resultados que coincidan con la b\u00FAsqueda
+dashboard.school.notselected=escuela no seleccionada
 
 #Detalle escuela
 schooldetail.title=datos escuela
@@ -137,7 +139,6 @@ detalleprofesor.active.modal.new.teacher.degree=grado
 detalleprofesor.active.modal.header.password=contrase\u0148a
 
 #Menu detalle-escuela
-menu=menu
 menu.schools=escuelas
 menu.catalog=cat\u00E1logo
 menu.dashboard=dashboard
