--- a/tecolotl-web/src/main/resources/etiqueta.properties
+++ b/tecolotl-web/src/main/resources/etiqueta.properties
@@ -1,10 +1,12 @@
+menu=men\u00FA
 options=opciones
 select=seleccione una opci\u00F3n
 word.key=palabra clave
 write.text=escriba texto
 description=descripci\u00F3n
-search=Escriba texto para filtrat...
+search=Escriba texto para filtrar...
 pages.total=p\u00E1gina {0, number} de {1,number} : total de filas {2, number}
+status=estatus
 
 #unicode
 #\u00E1 á
