--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         
         <!-- JBoss dependency versions -->
-        <version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
+        <version.wildfly.maven.plugin>1.2.0.Beta1</version.wildfly.maven.plugin>
         <!-- EAP component version management BOM -->
         <version.server.bom>7.1.0.GA</version.server.bom>
         <version.jboss.spec.javaee.7.0>1.1.0.Final-redhat-3</version.jboss.spec.javaee.7.0>
@@ -163,7 +163,7 @@
 
     <build>
         <finalName>${project.artifactId}</finalName>
-<!--        <pluginManagement>
+        <pluginManagement>
             <plugins>
                 <plugin>
                     <groupId>org.wildfly.plugins</groupId>
@@ -176,18 +176,6 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>3.7.1</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>3.0.0</version>
-            </plugin>
-        </plugins> -->
     </build>
 
     <modules>
