--- a/tecolotl-nucleo/pom.xml
+++ b/tecolotl-nucleo/pom.xml
@@ -66,6 +66,7 @@
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>javax.mail</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
