--- a/tecolotl-web/pom.xml
+++ b/tecolotl-web/pom.xml
@@ -67,5 +67,13 @@
            </exclusions>
        </dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.webjars/tinymce -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>tinymce</artifactId>
+			<version>5.0.9</version>
+		</dependency>
+
+
 	</dependencies>
 </project>
