--- a/tecolotl-web/pom.xml
+++ b/tecolotl-web/pom.xml
@@ -54,6 +54,12 @@
 			<artifactId>jboss-jsf-api_2.2_spec</artifactId>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.spec.javax.servlet</groupId>
+			<artifactId>jboss-servlet-api_3.1_spec</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		
 		 <dependency>
            <groupId>org.hibernate</groupId>
